[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Menus/Main/Assets/label_continue.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Menus/Main/Assets/Button-Ui-Play1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menus/Main/Assets/Button-ui-Options.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Menus/Main/Main.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Menus/Main/Assets/Button-Ui-Play2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menus/Main/Assets/button-ui-quit1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Menus/Main/Assets/button-ui-quit2.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Menus/Main/Assets/Button-ui-Options2.png" type="Texture" id=8]

[node name="Main" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 980.0

[node name="CenterContainerLeft" type="CenterContainer" parent="HBoxContainer"]
margin_right = 858.0
margin_bottom = 880.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainerLeft"]
margin_left = 326.0
margin_top = 256.0
margin_right = 532.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="ContinueButton" type="TextureButton" parent="HBoxContainer/CenterContainerLeft/VBoxContainer"]
margin_right = 206.0
margin_bottom = 36.0
texture_normal = ExtResource( 1 )

[node name="NewGameButton" type="TextureButton" parent="HBoxContainer/CenterContainerLeft/VBoxContainer"]
margin_top = 86.0
margin_right = 206.0
margin_bottom = 146.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )

[node name="SettingsButton" type="TextureButton" parent="HBoxContainer/CenterContainerLeft/VBoxContainer"]
margin_top = 196.0
margin_right = 206.0
margin_bottom = 256.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="HBoxContainer/CenterContainerLeft/VBoxContainer"]
margin_top = 306.0
margin_right = 206.0
margin_bottom = 368.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="CenterContainerRight" type="CenterContainer" parent="HBoxContainer"]
margin_left = 862.0
margin_right = 1720.0
margin_bottom = 880.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Image_Placeholder" type="Label" parent="HBoxContainer/CenterContainerRight"]
margin_left = 348.0
margin_top = 433.0
margin_right = 509.0
margin_bottom = 447.0
text = "game_image_placeholder"

[connection signal="pressed" from="HBoxContainer/CenterContainerLeft/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainerLeft/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainerLeft/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainerLeft/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
